--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,9 @@ body {
     rgb(95, 209, 249) 100.2%
   );
 }
+a {
+  color: #4557df;
+}
 .weather-app {
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
@@ -16,4 +19,81 @@ body {
   margin: 50px auto;
   max-width: 600px;
   color: #fff;
+  padding: 50px 40px 50px 40px;
+}
+
+main {
+  padding: 60px 5px;
+}
+
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.weather-app-city {
+  margin: 0;
+  font-size: 40px;
+  line-height: 40px;
+  color: #ebda78;
+  font-weight: lighter;
+}
+
+.weather-app-details {
+  font-size: 20px;
+  color: rgba(blanchedalmond, blanchedalmond, blanchedalmond, 0.6);
+  line-height: 30px;
+}
+.secondary-data {
+  color: #ebda78;
+}
+
+.search-form-input {
+  background-color: azure;
+  border: none;
+  border-radius: 10px;
+  padding: 12px;
+  margin: 10px auto;
+  width: 60%;
+  font-size: 14px;
+  margin-left: 10px;
+}
+
+.search-form-button {
+  background-color: #5665dd;
+  border: none;
+  color: #fff;
+  border-radius: 10px;
+  padding: 12px;
+  margin: 10px auto;
+  width: 15%;
+  font-size: 14px;
+  margin-left: 10px;
+}
+
+.weather-app-temperature-container {
+  display: flex;
+}
+
+.weather-app-temperature {
+  font-size: 50px;
+  font-weight: 500;
+  margin-top: 30px;
+}
+
+.weather-app-unit {
+  font-size: 25px;
+  margin-top: 30px;
+}
+
+.weather-app-icon {
+  font-size: 100px;
+}
+
+footer {
+  border-top: 0.9px solid aliceblue;
+  padding-top: 30px;
+  text-align: center;
+  font-size: 12px;
+  color: rgb(255, 255, 255, 0.7);
 }
