--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,24 @@ body {
 a {
   color: #4557df;
 }
+h1 {
+  color: blanchedalmond;
+  text-align: center;
+  font-size: 50px;
+  margin: 10px auto;
+  padding: 10px;
+  margin-bottom: 0px;
+}
+
+p {
+  color: #d4d9ff;
+  text-align: center;
+  font-size: 20px;
+  font-family: cursive;
+  margin: 10px auto;
+  margin-top: 0px;
+}
+
 .weather-app {
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
@@ -15,8 +33,8 @@ a {
   border-radius: 20px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  margin: 50px auto;
+  padding: 40px;
+  margin: 30px auto;
   max-width: 600px;
   color: #fff;
   padding: 50px 40px 50px 40px;
@@ -28,26 +46,31 @@ main {
 
 .weather-app-data {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .weather-app-city {
-  margin: 0;
-  font-size: 40px;
-  line-height: 40px;
+  margin-left: 5px;
+  font-size: 38px;
+  line-height: 50px;
   color: #ebda78;
   font-weight: lighter;
+  margin-top: 30px;
+  text-align: left;
 }
 
 .weather-app-details {
-  font-size: 20px;
-  color: rgba(blanchedalmond, blanchedalmond, blanchedalmond, 0.6);
-  line-height: 30px;
+  font-size: 15px;
+  color: blanchedalmond;
+  line-height: 20px;
 }
 .secondary-data {
   color: #ebda78;
 }
-
+.search-form {
+  margin: 0 auto;
+  text-align: center;
+}
 .search-form-input {
   background-color: azure;
   border: none;
@@ -73,21 +96,23 @@ main {
 
 .weather-app-temperature-container {
   display: flex;
+  margin-top: 30px;
+  margin-left: 5px;
 }
 
 .weather-app-temperature {
-  font-size: 50px;
+  font-size: 30px;
   font-weight: 500;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 .weather-app-unit {
   font-size: 25px;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 .weather-app-icon {
-  font-size: 100px;
+  font-size: 80px;
 }
 
 footer {
