--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ p {
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   padding: 40px;
-  margin: 30px auto;
+  margin: 40px auto;
   max-width: 600px;
   color: #fff;
   padding: 50px 40px 50px 40px;
@@ -46,7 +46,7 @@ main {
 
 .weather-app-data {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .weather-app-city {
@@ -77,7 +77,7 @@ main {
   border-radius: 10px;
   padding: 12px;
   margin: 10px auto;
-  width: 60%;
+  width: 70%;
   font-size: 14px;
   margin-left: 10px;
 }
@@ -89,7 +89,7 @@ main {
   border-radius: 10px;
   padding: 12px;
   margin: 10px auto;
-  width: 15%;
+  width: 20%;
   font-size: 14px;
   margin-left: 10px;
 }
