--- a/src/index.css
+++ b/src/index.css
@@ -1,124 +1,139 @@
 body {
-  background: radial-gradient(
-    circle at 12.3% 19.3%,
-    rgb(85, 88, 218) 0%,
-    rgb(95, 209, 249) 100.2%
-  );
-}
-a {
-  color: #4557df;
-}
-h1 {
-  color: blanchedalmond;
-  text-align: center;
-  font-size: 50px;
-  margin: 10px auto;
-  padding: 10px;
-  margin-bottom: 0px;
+  background-color: whitesmoke;
+  font-family: "Roboto", sans-serif;
 }
 
-p {
-  color: #d4d9ff;
+a {
+  color: white;
+}
+
+.app-name {
   text-align: center;
-  font-size: 20px;
+  margin: 30px auto;
+  color: #38598b;
   font-family: cursive;
-  margin: 10px auto;
-  margin-top: 0px;
+  font-size: 50px;
 }
 
 .weather-app {
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  border-radius: 20px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  padding: 40px;
-  margin: 40px auto;
+  background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
   max-width: 600px;
-  color: #fff;
-  padding: 50px 40px 50px 40px;
+  margin: 100px auto;
+  border-radius: 16px;
+  padding: 50px;
+}
+
+header {
+  border-bottom: 1px solid #d4c8f3;
+  padding: 0 0 30px 0;
+}
+
+.search-form-input {
+  background-color: #f9f7fe;
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  font-size: 16px;
+  padding: 15px 20px;
+}
+
+.search-form-button {
+  background: #113f67;
+  padding: 15px 30px;
+  border: none;
+  font-size: 16px;
+  margin-left: 5px;
+  border-radius: 6px;
+  color: white;
 }
 
 main {
-  padding: 60px 5px;
+  padding: 30px 0;
 }
 
 .weather-app-data {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .weather-app-city {
-  margin-left: 5px;
+  margin: 0;
   font-size: 38px;
-  line-height: 50px;
-  color: #ebda78;
-  font-weight: lighter;
-  margin-top: 30px;
-  text-align: left;
+  line-height: 48px;
 }
 
 .weather-app-details {
-  font-size: 15px;
-  color: blanchedalmond;
-  line-height: 20px;
-}
-.secondary-data {
-  color: #ebda78;
-}
-.search-form {
-  margin: 0 auto;
-  text-align: center;
-}
-.search-form-input {
-  background-color: azure;
-  border: none;
-  border-radius: 10px;
-  padding: 12px;
-  margin: 10px auto;
-  width: 70%;
-  font-size: 14px;
-  margin-left: 10px;
+  font-size: 16px;
+  color: rgba(39, 33, 66, 0.4);
+  line-height: 24px;
+  font-weight: 500;
 }
 
-.search-form-button {
-  background-color: #5665dd;
-  border: none;
-  color: #fff;
-  border-radius: 10px;
-  padding: 12px;
-  margin: 10px auto;
-  width: 20%;
-  font-size: 14px;
-  margin-left: 10px;
+.weather-app-details strong {
+  color: beige;
+  font-weight: 15px;
 }
 
 .weather-app-temperature-container {
   display: flex;
-  margin-top: 30px;
-  margin-left: 5px;
-}
-
-.weather-app-temperature {
-  font-size: 30px;
-  font-weight: 500;
-  margin-top: 20px;
-}
-
-.weather-app-unit {
-  font-size: 25px;
-  margin-top: 20px;
 }
 
 .weather-app-icon {
-  font-size: 80px;
+  width: 88px;
+  height: 88px;
+}
+
+.weather-app-temperature {
+  font-size: 88px;
+  line-height: 88px;
+  font-weight: bold;
+}
+
+.weather-app-unit {
+  margin-top: 6px;
+  font-size: 28px;
 }
 
 footer {
-  border-top: 0.9px solid aliceblue;
-  padding-top: 30px;
+  border-top: 1px solid #f9f7fe;
+  padding: 30px 0 0 0;
   text-align: center;
-  font-size: 12px;
-  color: rgb(255, 255, 255, 0.7);
+  font-size: 14px;
+  color: #113f67;
+}
+button {
+  display: block;
+  margin: 0 auto;
+  padding: 15px 20px;
+  border: none;
+  border-radius: 40px;
+  font-size: 16px;
+  transition: all 200ms ease-in-out;
+  box-shadow: rgba(37, 39, 89, 0.08) 0px 8px 8px 0;
+}
+a:hover {
+  text-decoration: underline;
+  pointer: cursor;
+}
+button:hover {
+  color: black;
+  background: white;
+  border: 1px solid black;
+}
+
+.dark {
+  display: block;
+  margin: 0 auto;
+  color: white;
+  font-size: 16px;
+  background: black;
+  padding: 15px 20px;
+  border: 1px solid #885df1;
+  border-radius: 40px;
+  box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.2);
+  transition: all 200ms ease-in-out;
+}
+
+.backdrop {
+  background: black;
 }
